Fix email reminder style on mobile

--- a/templates/_css/style.scss
+++ b/templates/_css/style.scss
@@ -1478,7 +1478,7 @@ input[type=range] {
     .button{flex: 0 0 auto;}
 
     @include only-phone{ // Vertical buttons
-        flex-wrap: wrap;
+        flex-direction: column column-reverse;
         gap: var(--s);
 
         .button{
@@ -2403,6 +2403,10 @@ details{
 
         input{
             max-width: none;
+        }
+
+        @include only-phone{
+            grid-template-columns: 1fr;
         }
     }
 }
